[gd_scene load_steps=5 format=3 uid="uid://b6nlwnw1moteh"]

[ext_resource type="PackedScene" uid="uid://bttlpdvhmocn3" path="res://Scenes/UI/Lists/header.tscn" id="1_ca1bm"]
[ext_resource type="Script" uid="uid://b5vy36u6famkc" path="res://Code/Scenes/UI/List/dmg_manip_box.gd" id="1_mt2uw"]
[ext_resource type="PackedScene" uid="uid://forsjrvfnym2" path="res://Scenes/UI/Lists/slot_list.tscn" id="2_mt2uw"]
[ext_resource type="PackedScene" uid="uid://c28rtuj3kak48" path="res://Scenes/UI/Lists/Footer.tscn" id="3_4qsre"]

[node name="DmgManipBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mt2uw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Header" parent="VBoxContainer" node_paths=PackedStringArray("dragging_node", "shrinkNodes", "hideNodes") instance=ExtResource("1_ca1bm")]
unique_name_in_owner = true
layout_mode = 2
dragging_node = NodePath("../..")
shrinkNodes = [NodePath("../PanelContainer/MarginContainer/VBoxContainer/SlotList")]
hideNodes = [NodePath("../Footer"), NodePath("../PanelContainer/MarginContainer/VBoxContainer/Actions")]

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="SlotList" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_mt2uw")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Actions" type="PanelContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DeepPannel"

[node name="InfoSection" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Actions"]
layout_mode = 2

[node name="IndSwap" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Actions/InfoSection"]
layout_mode = 2

[node name="indSwapNum" type="RichTextLabel" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Actions/InfoSection/IndSwap"]
unique_name_in_owner = true
custom_minimum_size = Vector2(39, 0)
layout_mode = 2
size_flags_horizontal = 3
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Actions/InfoSection/IndSwap"]
custom_minimum_size = Vector2(168, 0)
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Clear" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Actions/InfoSection/IndSwap/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Clear"

[node name="Swap" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Actions/InfoSection/IndSwap/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Swap"

[node name="Info&End" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Actions/InfoSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="Instructions" type="RichTextLabel" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Actions/InfoSection/Info&End"]
unique_name_in_owner = true
custom_minimum_size = Vector2(236, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Reciever: Team Magma's Poochyena"
fit_content = true

[node name="End" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Actions/InfoSection/Info&End"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Finish"

[node name="Footer" parent="VBoxContainer" node_paths=PackedStringArray("dragging_node") instance=ExtResource("3_4qsre")]
unique_name_in_owner = true
layout_mode = 2
dragging_node = NodePath("../..")

[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Actions/InfoSection/IndSwap/HBoxContainer/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Actions/InfoSection/Info&End/End" to="." method="_on_end_pressed"]
